--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,79 @@
-<!DOCTYPE html> <html lang="en"> <head><meta name="viewport" content="width=device-width, initial-scale=1"><meta charset="UTF-8"><meta http-equiv="Content-Security-Policy" content="data:text/html;charset=utf-8"><title>sexwithme</title><style type="text/css">body,html {height:100%; margin:0px; overflow:hidden; width:100%;}</style></head> <body><iframe name="site" id="site" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" src="https://jjkba.shiningdates.com?utm_source=da57dc555e50572d&s1=55332&s2=1646230&click_id=minangleng&j1=1"></iframe></body></html>
+<html lang="en-US">
+ <head>
+  <meta charset="UTF-8">
+  <base href="https://cdn-cd.akamaized.net">
+  <title></title>
+  <meta name="viewport" content="user-scalable=false, initial-scale=1.0, maximum-scale=1.0"> 
+  <link href="/images/favicon.ico" rel="icon" type="image/x-icon"> 
+  <meta content="" name="keywords">
+  <meta content="" name="description">
+  <link rel="stylesheet" type="text/css" href="https://cdn.smrt-assets.com/assets/1662/css/style.css"> 
+ </head> 
+ <body> 
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('.show_hide').showHide({
+        speed: 400,        easing: '',        changeText: 1,        showText: 'View',        hideText: ''      }
+      );
+    }
+                      );
+  </script> 
+  <div class="layer"> 
+  </div> 
+  <div id="container" align="left"> 
+   <img src="images/pixel.png" alt=""> 
+   <div id="q00" class="toggleDiv" style="display: block;" align="center"> 
+    <div class="mobile-center"> 
+     <div class="videobgbox"> 
+      <video class="video" loop="" autoplay="" muted playsinline=""> 
+       <source src="https://cdn-media.f-static.net/uploads/4831526/normal_6241d460c67fd.mp4" type="video/mp4"> 
+      </video> 
+     </div> 
+     <div id="box" class="box-bg" align="center" style="margin-top: 50px;"> 
+      <div id="first-title" align="center"> 
+       <h1 class="font-style title"> LET'S JOIN US ! </h1>
+      </div> 
+      <p class="text main-text"> FREE TO JOIN THIS GROUP </p>
+      <p> PLEASE CONFIRM YOUR AGE 🔞 </p>
+      <p> <a class="show_hide" href="#" rel="#q0"> </a></p>
+      <div class="wrap">
+       <a class="show_hide" href="#" rel="#q0"> </a>
+       <div class="btn">
+        <a class="show_hide" href="#" rel="#q0"> </a>
+        <div class="btn-cap next">
+         <a class="show_hide" href="#" rel="#q0"></a>
+         <a href="https://jjkba.paiatialdates.net?utm_source=da57dc555e50572d&s1=55332&s2=1803611&click_id=debby&j1=1"> ⏩ FREE JOIN HERE ⏪ </a>
+         <!-- Footer -->
+         <footer id="footer">
+          <p><b style="color: red"></b></p>
+         </footer>
+        </div>
+       </div>
+       <script type="text/javascript">
+  /*<![CDATA[*/    (function(w){
+    w.backOfferUrl = '   }
+                    (window));
+  /*]]>*/  </script> 
+       <!-- Histats.com  START  (aync)--> 
+       <script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4660371,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script> 
+       <noscript>
+        <a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4660371&amp;101" alt="" border="0"></a>
+       </noscript> 
+       <!-- Histats.com  END  --> 
+      </div>
+     </div>
+    </div>
+   </div>
+  </div> 
+  <iframe src="https://t.dtscout.com/idg/?su=4C301680376967C3F4DE14B5E72C953B" width="0" height="0" style="display: none;"></iframe> 
+  <img src="https://pixel.onaudience.com/?partner=137085098&amp;mapped=4C301680376967C3F4DE14B5E72C953B" width="1" height="1" border="0" style="display: none;"> 
+ </body>
+</html>
