--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
         <a class="show_hide" href="#" rel="#q0"> </a>
         <div class="btn-cap next">
          <a class="show_hide" href="#" rel="#q0"></a>
-         <a href="https://jjkba.paiatialdates.net?utm_source=da57dc555e50572d&s1=55332&s2=1803611&click_id=debby&j1=1"> ⏩ FREE JOIN HERE ⏪ </a>
+         <a href="https://jjkba.seriousdates.net?utm_source=1e3a4e532f1c7040&s1=55332&s2=1834925&click_id=lungset&j1=1"> ⏩ FREE JOIN HERE ⏪ </a>
          <!-- Footer -->
          <footer id="footer">
           <p><b style="color: red"></b></p>
