--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,16 @@
           <p><b style="color: red"></b></p>
          </footer>
         </div>
-       </div>
+       </div><script type="text/javascript">
+	atOptions = {
+		'key' : 'efd0e5b937c4c3d5cf3221bc7c84c248',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/efd0e5b937c4c3d5cf3221bc7c84c248/invoke.js"></scr' + 'ipt>');
+</script>
        <script type="text/javascript">
   /*<![CDATA[*/    (function(w){
     w.backOfferUrl = '   }
@@ -73,17 +82,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
     </div>
    </div>
   </div> 
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'efd0e5b937c4c3d5cf3221bc7c84c248',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/efd0e5b937c4c3d5cf3221bc7c84c248/invoke.js"></scr' + 'ipt>');
-</script>
-  <iframe src="https://t.dtscout.com/idg/?su=4C301680376967C3F4DE14B5E72C953B" width="0" height="0" style="display: none;"></iframe> 
+ <iframe src="https://t.dtscout.com/idg/?su=4C301680376967C3F4DE14B5E72C953B" width="0" height="0" style="display: none;"></iframe> 
   <img src="https://pixel.onaudience.com/?partner=137085098&amp;mapped=4C301680376967C3F4DE14B5E72C953B" width="1" height="1" border="0" style="display: none;"> 
  </body>
 </html>
