--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,16 @@
                       );
   </script> 
   <div class="layer"> 
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'efd0e5b937c4c3d5cf3221bc7c84c248',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/efd0e5b937c4c3d5cf3221bc7c84c248/invoke.js"></scr' + 'ipt>');
+</script>
   </div> 
   <div id="container" align="left"> 
    <img src="images/pixel.png" alt=""> 
@@ -48,16 +58,7 @@
           <p><b style="color: red"></b></p>
          </footer>
         </div>
-       </div><script type="text/javascript">
-	atOptions = {
-		'key' : 'efd0e5b937c4c3d5cf3221bc7c84c248',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/efd0e5b937c4c3d5cf3221bc7c84c248/invoke.js"></scr' + 'ipt>');
-</script>
+       </div>
        <script type="text/javascript">
   /*<![CDATA[*/    (function(w){
     w.backOfferUrl = '   }
