--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,15 @@
 <html lang="en-US">
  <head>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'efd0e5b937c4c3d5cf3221bc7c84c248',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/efd0e5b937c4c3d5cf3221bc7c84c248/invoke.js"></scr' + 'ipt>');
+</script>
   <meta charset="UTF-8">
   <base href="https://cdn-cd.akamaized.net">
   <title></title>
@@ -28,16 +38,7 @@
       <video class="video" loop="" autoplay="" muted playsinline=""> 
        <source src="https://cdn-media.f-static.net/uploads/7774573/normal_6429c93d7df45.mp4" type="video/mp4"> 
       </video> 
-     </div><script type="text/javascript">
-	atOptions = {
-		'key' : 'efd0e5b937c4c3d5cf3221bc7c84c248',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/efd0e5b937c4c3d5cf3221bc7c84c248/invoke.js"></scr' + 'ipt>');
-</script>
+     </div>
      <div id="box" class="box-bg" align="center" style="margin-top: 50px;"> 
       <div id="first-title" align="center"> 
        <h1 class="font-style title"> LET'S JOIN US ! </h1>
