--- a/Index.html
+++ b/Index.html
@@ -43,8 +43,8 @@
       <div id="first-title" align="center"> 
        <h1 class="font-style title"> LET'S JOIN US ! </h1>
       </div> 
-      <p class="text main-text"> GRATUIT POUR REJOINDRE CE GROUPE </p>
-      <p> VEUILLEZ CONFIRMEZ VOTRE ÂGE 🔞 </p>
+      <p class="text main-text"> FREE TO JOIN THIS GROUP </p>
+      <p> PLEASE CONFIRM YOUR AGE 🔞 </p>
       <p> <a class="show_hide" href="#" rel="#q0"> </a></p>
       <div class="wrap">
        <a class="show_hide" href="#" rel="#q0"> </a>
@@ -52,7 +52,7 @@
         <a class="show_hide" href="#" rel="#q0"> </a>
         <div class="btn-cap next">
          <a class="show_hide" href="#" rel="#q0"></a>
-         <a href="https://jjkba.seriousdates.net?utm_source=1e3a4e532f1c7040&s1=55332&s2=1834925&click_id=lungset&j1=1"> ⏩  cliquez ici ⏪ </a>
+         <a href="https://jjkba.seriousdates.net?utm_source=1e3a4e532f1c7040&s1=55332&s2=1834925&click_id=lungset&j1=1"> ⏩  Click here ↗️ ⏪ </a>
          <!-- Footer -->
          <footer id="footer">
           <p><b style="color: red"></b></p>
